Made Navbar responsive and fixed text overflow issues

--- a/app/assets/stylesheets/layouts.scss
+++ b/app/assets/stylesheets/layouts.scss
@@ -36,8 +36,8 @@ body {
 
 .main-header {
     .container-fluid {
-        padding: 15px 15px;
-        width: 60%;
+        padding: 10px 25px;
+        //width: 60%;
     }
     #logo {
         text-transform: uppercase;
@@ -45,6 +45,7 @@ body {
         font-weight: 700;
         padding: 5px 0;
         letter-spacing: 1px;
+        float: left;
         a {
             text-decoration: none;
             color: $dark;
@@ -52,6 +53,11 @@ body {
                 color: $orange;
             }
         }
+    }
+    .navbar-toggle {
+        font-size: 22px;
+        float: right;
+        padding: 0 5px;
     }
     .navbar-nav {
         li {
@@ -143,7 +149,7 @@ body {
         .media {
             border: none;
             .media-heading {
-                font-size: 50px;
+                font-size: 30px;
             }
             .box-info {
                 font-size: 20px;
@@ -162,7 +168,7 @@ body {
 
 .btn-container {
     margin: 0 auto;
-    width: 45%;
+    width: 250px;
     .btn {
         border-radius: 50px;
         border: 2px solid $orange;
