--- a/app/assets/stylesheets/print_label.scss
+++ b/app/assets/stylesheets/print_label.scss
@@ -23,7 +23,7 @@
             //border: 1px solid $orange;
             width: 230px;
             padding: 15px;
-            .media-heading {
+            #print-logo {
                 font-size: 24px;
                 font-weight: 700;
                 text-transform: uppercase;
